# complextNetworkGraph

./: .gitignore  app.py  batch_report.json  pipeline.py  preProces.py  pyproject.toml  requirements.txt  table_extractor.py  table_extractor_transformer.py
graph/: table_structure_graph.graphml  visualize.py
reconstruct/: BankTSB_2.tsv  natwest_2.tsv  natwest_3.tsv  shadow.py  teseract.py
recosntruct/: extracted_table_12.tsv  extracted_table_6.tsv  shadow.py  teseract.py
table_extractor/: table_extractor_transformer.py  table_extractor_yolo.py
utils/: get_dataset.py
verification/: verify.py
verification/ground_truth/: Bank TSB 2022.pdf_3.tsv  BankTSB_2.tsv  natwest2.pdf_2.tsv  natwest2.pdf_3.tsv  natwest_1.tsv
